fix discord link, fix footer on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,6 +26,10 @@
   }
 }
 
+.footer-col-wrapper {
+  margin-left: 0;
+}
+
 pre, code, .highlight {
   background: none;
 }
